syntax = "proto3";

option java_multiple_files = false;
option java_package = "io.pixelsdb.pixels.retina";
option java_outer_classname = "RetinaWriterProto";

package retina_writer.proto;

service RetinaWriterService {
  rpc Flush (FlushRequest) returns (FlushResponse);
}

message FlushRequest {
  string schemaName = 1;
  string tableName = 2;
  sint32 rgid = 3;
  string filePath = 4;
  uint64 pos = 5;
}

message FlushResponse {
  int32 errorCode = 1;
  uint64 pos = 2;
}



